Moved @font-face fonts to separate stylesheet and preloaded it to avoid font flickering on page load.

--- a/style.css
+++ b/style.css
@@ -1,18 +1,3 @@
-@font-face {
-  font-family: Regular;
-  src: url(Fonts/MPLUSRounded1c-Regular.ttf);
-}
-
-@font-face {
-  font-family: Bold;
-  src: url(Fonts/MPLUSRounded1c-Bold.ttf);
-}
-
-@font-face {
-  font-family: Black;
-  src: url(Fonts/MPLUSRounded1c-Black.ttf);
-}
-
 html {
   height: 100%;
   margin: 0;
@@ -24,7 +9,7 @@ body {
   margin: auto;
   width: 90vw;
 }
-
+/* Stops tap highlighting on mobile!!! */
 input,
 textarea,
 button,
